--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/trix/dist/trix.css";
+@import "../css/dropzone.min.css";
 
 .content-editor-trix-content {
     line-height: 1.5;
