#feat: Content->teaser() #fix: Save content when leaving data view #fix: Applied styling to trix #fix: Headline button clearer #style: foodhub colors

--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -1,8 +1,12 @@
 $content-editor-layout-background: #fe8a71;
-$content-editor-components-background: #f6cd61;
+//$content-editor-components-background: #f6cd61;
+$content-editor-components-background: #fff9f1;
 
-$content-editor-component-color: #3da4ab;
-$content-editor-component-hover-outline: #0e9aa7;
+/*$content-editor-component-color: #3da4ab;
+$content-editor-component-hover-outline: #0e9aa7;*/
+
+$content-editor-component-color: #9caa9b;
+$content-editor-component-hover-outline: #778b76;
 
 $content-editor-danger: #ab3d3d;
 
